--- a/analysis/03_eating_disorder_stats.Rmd
+++ b/analysis/03_eating_disorder_stats.Rmd
@@ -34,14 +34,39 @@ cov_dur <- covid_start %--% max(df_an$adm_date) %>% as.numeric("years")
 df_an %>% group_by(case_id) %>% summarise(n = n()) %>% 
   ggplot(aes(x = n)) + geom_bar() + ggtitle("number of diagnoses per case")
 
+f50_types <- list(
+  c("F50.0", "F50.00", "F50.01", "F50.1") ~ "AN",
+  c("F50.2", "F50.3") ~ "BN",
+  c("F50.4", "F50.5", "F50.8", "F50.9", "F98.2") ~ "Essstörung sonst."
+  )
+
+# create ED category variables
+df_an %<>% 
+  mutate(icd_f50 = factor(if_else(str_detect(as.character(icd_code), "F50|F98.2"), "F50+", "F50-"), 
+                          levels = c("F50-", "F50+"), ordered = TRUE),
+         f50_type = factor(case_match(as.character(icd_code), !!!f50_types, .default = "F50-"),
+                           levels = c("F50-", "Essstörung sonst.", "BN", "AN"), ordered = TRUE),
+         covid = factor(if_else(adm_date < covid_start, "pre_covid", "dur_covid"), 
+                        levels = c("pre_covid", "dur_covid"), ordered = TRUE))
+
+# exclude cases with multiple ED subdiagnosis
+cases_excl_mult_ed <- df_an %>% 
+  filter(icd_f50 == "F50+") %>%
+  group_by(case_id) %>%
+  filter(n_distinct(f50_type) > 1) %>% 
+  use_series(case_id) %>% 
+  as.character() %>% 
+  unique()
+
 # df_c has 1 row per case
 df_c <- df_an %>% 
-  filter(!is.na(icd_code)) %>% 
-  group_by(case_id) %>% 
-  mutate(icd_f50 = as_factor(if_else(any(str_detect(icd_code, "^F50")), "F50+", "F50-")),
-         covid = as_factor(if_else(adm_date < covid_start, "pre_covid", "dur_covid"))) %>% 
-  select(!c(icd_code, icd_date)) %>% 
-  slice_head(n = 1) %>% 
+  filter(!is.na(icd_code)) %>%
+  # filter(!(case_id %in% cases_excl_mult_ed)) %>%
+  group_by(case_id) %>%
+  mutate(icd_f50 = max(icd_f50), 
+         f50_type = max(f50_type)) %>%
+  select(!c(icd_code, icd_date)) %>%
+  slice_head(n = 1) %>%
   ungroup()
 ```
 
@@ -89,12 +114,16 @@ df_c %>%
          adm_month = as_factor(str_c(year(adm_date), month(adm_date), sep = ".")),
          adm_quarter = as_factor(quarter(adm_date, type = "year.quarter"))) %>%
   group_by(adm_month) %>% 
-  summarise(F50_prop = sum(icd_f50 == "F50+")/n()*100) %>% 
-  ggplot(aes(x = adm_month, y = F50_prop)) + 
-  # geom_col() +
-  geom_line(aes(group = 1)) +
+  summarise(#F50_prop = sum(icd_f50 == "F50+")/n()*100, 
+            AN_prop = sum(f50_type == "AN")/n()*100,
+            BN_prop = sum(f50_type == "BN")/n()*100,
+            ES_sonst_prop = sum(f50_type == "Essstörung sonst.")/n()*100) %>% 
+  pivot_longer(ends_with("_prop"), names_to = "f50_prop_type", values_to = "f50_props") %>% 
+  ggplot(aes(x = adm_month, y = f50_props, group = f50_prop_type)) + 
+  geom_col(aes(fill = f50_prop_type)) +
+  # geom_line(aes(colour = f50_prop_type)) +
   guides(x = guide_axis(angle = -90)) + 
-  geom_vline(aes(colour = "red", xintercept = "2020.3"), show.legend = FALSE) + 
+  geom_vline(aes(xintercept = "2020.3"), show.legend = FALSE) +
   labs(title = "Proportion of cases with F50.* diagnoses per month", 
        x = "Year.Month", y = "cases with F50.* diagnosis [%]")
 ```
@@ -108,7 +137,7 @@ df_c %>%
   filter(case_id != first(case_id)) %>% 
   ungroup() %>%
   # slice_head(n = 500) %>%
-  ggplot(aes(x = adm_date, xend = dis_date, y = p_id, yend = p_id, group = case_id, colour = icd_f50)) +
+  ggplot(aes(x = adm_date, xend = dis_date, y = p_id, yend = p_id, group = case_id, colour = f50_type)) +
   geom_segment() + 
   scale_x_datetime(date_breaks = "3 months", date_labels = "%y.%m", date_minor_breaks = "1 month", 
                    guide = guide_axis(angle = -90)) +
@@ -135,4 +164,11 @@ gen_tabyl <- function(df, ...){
 df_c %>% gen_tabyl(covid, icd_f50)
 df_c %>% gen_tabyl(icd_f50, sex)
 df_c %>% gen_tabyl(icd_f50, sex, covid)
+```
+
+## counts & proportions for ED subcategories
+```{r}
+df_c %>% gen_tabyl(covid, f50_type)
+df_c %>% gen_tabyl(f50_type, sex)
+df_c %>% gen_tabyl(f50_type, sex, covid)
 ```
