--- a/analysis/03_eating_disorder_stats.Rmd
+++ b/analysis/03_eating_disorder_stats.Rmd
@@ -21,59 +21,21 @@ load_inst_pkgs("tidyverse", "psych", "janitor", "knitr")
 ```
 
 # Sample periods
-```{r echo=TRUE}
-df_an <- df_patched %>% filter(between(adm_date, ymd("2016-01-01"), # or 2018-03-01 - 2 years before Covid
-                                       ymd("2022-02-28"))) # until start of Ukraine war
-covid_start <- ymd("2020-03-01")
-pre_cov_dur <- min(df_an$adm_date) %--% covid_start %>% as.numeric("years")
-cov_dur <- covid_start %--% max(df_an$adm_date) %>% as.numeric("years")
-```
+- Pre-Covid from `r study_start` until `r covid_start`: `r pre_cov_dur` years
+- During Covid pandemic until `r study_end`: `r cov_dur` years
+
 
 # sample characteristics
 ```{r}
-df_an %>% group_by(case_id) %>% summarise(n = n()) %>% 
+df_diag %>%
+  summarise(n = n_distinct(icd_code), .by = case_id) %>%
   ggplot(aes(x = n)) + geom_bar() + ggtitle("number of diagnoses per case")
-
-f50_types <- list(
-  c("F50.0", "F50.00", "F50.01", "F50.1") ~ "AN",
-  c("F50.2", "F50.3") ~ "BN",
-  c("F50.4", "F50.5", "F50.8", "F50.9", "F98.2") ~ "Essstörung sonst."
-  )
-
-# create ED category variables
-df_an %<>% 
-  mutate(icd_f50 = factor(if_else(str_detect(as.character(icd_code), "F50|F98.2"), "F50+", "F50-"), 
-                          levels = c("F50-", "F50+"), ordered = TRUE),
-         f50_type = factor(case_match(as.character(icd_code), !!!f50_types, .default = "F50-"),
-                           levels = c("F50-", "Essstörung sonst.", "BN", "AN"), ordered = TRUE),
-         covid = factor(if_else(adm_date < covid_start, "pre_covid", "dur_covid"), 
-                        levels = c("pre_covid", "dur_covid"), ordered = TRUE))
-
-# exclude cases with multiple ED subdiagnosis
-cases_excl_mult_ed <- df_an %>% 
-  filter(icd_f50 == "F50+") %>%
-  group_by(case_id) %>%
-  filter(n_distinct(f50_type) > 1) %>% 
-  use_series(case_id) %>% 
-  as.character() %>% 
-  unique()
-
-# df_c has 1 row per case
-df_c <- df_an %>% 
-  filter(!is.na(icd_code)) %>%
-  # filter(!(case_id %in% cases_excl_mult_ed)) %>%
-  group_by(case_id) %>%
-  mutate(icd_f50 = max(icd_f50), 
-         f50_type = max(f50_type)) %>%
-  select(!c(icd_code, icd_date)) %>%
-  slice_head(n = 1) %>%
-  ungroup()
 ```
 
 ## cases per year pre/during covid
 ```{r}
-df_c %>% 
-  group_by(covid) %>%
+df_ed %>% 
+  group_by(covid_pan) %>%
   summarise(n_cases = n_distinct(case_id),
             n_patients = n_distinct(p_id)) %>%
   mutate(years = c(pre_cov_dur, cov_dur)) %>%
@@ -87,37 +49,36 @@ df_c %>%
 summarise_mean_sd <- function(df) {
   summarise(df, 
             # across(where(~is.numeric(.x) | is.POSIXct(.x)), list(mean = ~mean(., na.rm = FALSE), sd = SD)), 
-            across(c(age_adm, length_stay), list(mean = ~mean(., na.rm = FALSE), sd = SD)), 
-            across(sex, list(mean = ~mean(as.numeric(.)-1, na.rm = FALSE), sd = ~SD(as.numeric(.)-1))),
+            across(c(age_adm, length_stay), list(mean = ~mean(., na.rm = TRUE), sd = SD)), 
+            across(sex, list(mean = ~mean(as.numeric(.)-1, na.rm = TRUE), sd = ~SD(as.numeric(.)-1))),
             n_cases = n())
 }
 
-df_c_stats <- 
+df_ed_stats <- 
   # F50 all
-  df_c %>% summarise_mean_sd() %>% mutate(covid = "total_dur", .before = 1) %>% 
-  bind_rows(df_c %>% group_by(covid) %>% summarise_mean_sd()) %>% 
+  df_ed %>% summarise_mean_sd() %>% mutate(covid_pan = "total_dur", .before = 1) %>% 
+  bind_rows(df_ed %>% group_by(covid_pan) %>% summarise_mean_sd()) %>% 
   mutate(icd_f50 = "all_diag", .before = 2) %>% 
   # F50 groups
-  bind_rows(df_c %>% group_by(icd_f50) %>% summarise_mean_sd() %>% mutate(covid = "total_dur", .before = 1)) %>% 
-  bind_rows(df_c %>% group_by(icd_f50, covid) %>% summarise_mean_sd()) %>% 
-  mutate(covid = fct(covid, c("pre_covid", "dur_covid", "total_dur")),
+  bind_rows(df_ed %>% group_by(icd_f50) %>% summarise_mean_sd() %>% mutate(covid_pan = "total_dur", .before = 1)) %>% 
+  bind_rows(df_ed %>% group_by(icd_f50, covid_pan) %>% summarise_mean_sd()) %>% 
+  mutate(covid_pan = fct(covid_pan, c("pre_covid", "dur_covid", "total_dur")),
          icd_f50 = fct(icd_f50, c("F50-", "F50+", "all_diag"))) %>% 
-  arrange(icd_f50, covid)
-df_c_stats
+  arrange(icd_f50, covid_pan)
+df_ed_stats
 ```
 
 ## trend of ED diagnosis proportion
 ```{r}
-df_c %>% 
+df_ed %>% 
   arrange(adm_date) %>% 
-  mutate(adm_week = as_factor(str_c(year(adm_date), week(adm_date), sep = "-KW")), 
-         adm_month = as_factor(str_c(year(adm_date), month(adm_date), sep = ".")),
+  mutate(adm_month = as_factor(str_c(year(adm_date), month(adm_date), sep = ".")),
          adm_quarter = as_factor(quarter(adm_date, type = "year.quarter"))) %>%
   group_by(adm_month) %>% 
   summarise(#F50_prop = sum(icd_f50 == "F50+")/n()*100, 
-            AN_prop = sum(f50_type == "AN")/n()*100,
-            BN_prop = sum(f50_type == "BN")/n()*100,
-            ES_sonst_prop = sum(f50_type == "Essstörung sonst.")/n()*100) %>% 
+            AN_prop = sum(f50_type == "Anorexie")/n()*100,
+            BN_prop = sum(f50_type == "Bulimie")/n()*100,
+            ED_sonst_prop = sum(f50_type == "Essstörung Sonst.")/n()*100) %>% 
   pivot_longer(ends_with("_prop"), names_to = "f50_prop_type", values_to = "f50_props") %>% 
   ggplot(aes(x = adm_month, y = f50_props, group = f50_prop_type)) + 
   geom_col(aes(fill = f50_prop_type)) +
@@ -130,14 +91,16 @@ df_c %>%
 
 ## periods of cases per patient
 ```{r}
-df_c %>% 
+df_ed %>% 
   group_by(p_id) %>%
   mutate(n_cases = n()) %>%
   filter(n_cases > 1) %>%
-  filter(case_id != first(case_id)) %>% 
+  # filter(case_id != first(case_id)) %>% 
   ungroup() %>%
   # slice_head(n = 500) %>%
-  ggplot(aes(x = adm_date, xend = dis_date, y = p_id, yend = p_id, group = case_id, colour = f50_type)) +
+  ggplot(aes(x = adm_date, xend = dis_date,
+             y = fct_reorder(p_id, adm_date, first), yend = p_id,
+             group = case_id, colour = f50_type)) +
   geom_segment() + 
   scale_x_datetime(date_breaks = "3 months", date_labels = "%y.%m", date_minor_breaks = "1 month", 
                    guide = guide_axis(angle = -90)) +
@@ -161,14 +124,14 @@ gen_tabyl <- function(df, ...){
     adorn_title("combined")
 }
 
-df_c %>% gen_tabyl(covid, icd_f50)
-df_c %>% gen_tabyl(icd_f50, sex)
-df_c %>% gen_tabyl(icd_f50, sex, covid)
+df_ed %>% gen_tabyl(covid_pan, icd_f50)
+df_ed %>% gen_tabyl(icd_f50, sex)
+df_ed %>% gen_tabyl(icd_f50, sex, covid_pan)
 ```
 
 ## counts & proportions for ED subcategories
 ```{r}
-df_c %>% gen_tabyl(covid, f50_type)
-df_c %>% gen_tabyl(f50_type, sex)
-df_c %>% gen_tabyl(f50_type, sex, covid)
+df_ed %>% gen_tabyl(covid_pan, f50_type)
+df_ed %>% gen_tabyl(f50_type, sex)
+df_ed %>% gen_tabyl(f50_type, sex, covid_pan)
 ```
