--- a/analysis/03_eating_disorder_stats.Rmd
+++ b/analysis/03_eating_disorder_stats.Rmd
@@ -4,6 +4,11 @@ author: "SP"
 date: "`r Sys.Date()`"
 output: 
   workflowr::wflow_html: 
+    toc: true
+    toc_float:
+      collapsed: false
+      smooth_scroll: true
+    number_sections: true
     df_print: paged
     fig_width: 11
     fig_height: 8
@@ -18,7 +23,7 @@ knitr::opts_chunk$set(warning = FALSE, echo = FALSE)
 ```
 
 ```{r libs, include=FALSE}
-do_source_data_creation <- TRUE
+do_source_data_creation <- FALSE
 source("code/eating_disorder_data_proc.R")
 load_inst_pkgs("tidyverse", "psych", "janitor", "knitr")
 ```
@@ -29,7 +34,7 @@ load_inst_pkgs("tidyverse", "psych", "janitor", "knitr")
 
 
 # sample characteristics
-## number of diagnosis per case
+## number of unique diagnoses per case
 ```{r}
 df_diag %>%
   summarise(n = n_distinct(icd_code), .by = case_id) %>%
@@ -53,9 +58,11 @@ df_ed %>%
 summarise_mean_sd <- function(df) {
   summarise(df, 
             # across(where(~is.numeric(.x) | is.POSIXct(.x)), list(mean = ~mean(., na.rm = FALSE), sd = SD)), 
-            across(c(age_adm, length_stay_brutto, n_icd_f, n_icd_other),
+            across(c(age_adm, length_stay_brutto, n_icd_f, n_icd_other, re_adm_lag),
                    list(mean = ~mean(., na.rm = TRUE), sd = SD)), 
             across(sex, list(mean = ~mean(as.numeric(.)-1, na.rm = TRUE), sd = ~SD(as.numeric(.)-1))),
+            across(re_adm_soon, list(mean = ~mean(as.numeric(replace_na(., FALSE))),
+                                     sd = ~SD(as.numeric(replace_na(., FALSE))))),
             n_cases = n())
 }
 
@@ -169,37 +176,27 @@ df_ed %>%
        x = "time", y = "patients", colour = "ED diag")
 ```
 
-## counts & proportions
+## sex counts & proportions {.tabset .tabset-pills}
 ```{r}
-gen_tabyl <- function(df, ...){
-  df %>% 
-    tabyl(..., show_missing_levels = FALSE) %>% 
-    adorn_totals(c("row", "col")) %>% 
-    adorn_percentages("row") %>%
-    adorn_pct_formatting(digits = 1) %>%
-    adorn_ns() %>% 
-    adorn_title("combined")
-}
-
 df_ed %>% gen_tabyl(covid_pan, icd_f50)
 df_ed %>% gen_tabyl(icd_f50, sex)
 df_ed %>% gen_tabyl(icd_f50, sex, covid_pan)
 ```
 
-### counts & proportions for ED subcategories
+### sex counts & proportions for ED subcategories
 ```{r}
 df_ed %>% gen_tabyl(covid_pan, f50_type)
 df_ed %>% gen_tabyl(f50_type, sex)
 df_ed %>% gen_tabyl(f50_type, sex, covid_pan)
 ```
 
-### counts & proportions for lockdowns
+### sex counts & proportions for lockdowns
 ```{r}
 df_ed %>% gen_tabyl(covid_lockd, icd_f50)
 df_ed %>% gen_tabyl(icd_f50, sex, covid_lockd)
 ```
 
-### counts & proportions for lockdowns & ED subcategories
+### sex counts & proportions for lockdowns & ED subcategories
 ```{r}
 df_ed %>% gen_tabyl(covid_lockd, f50_type)
 df_ed %>% tabyl(covid_lockd, f50_type) %>% chisq.test()
@@ -213,7 +210,7 @@ df_ed %>% gen_tabyl(f50_type, sex, covid_lockd)
 n_tests <- 9
 ```
 
-## Essstörungen während Pandemie
+## Essstörungen während Pandemie {.tabset .tabset-pills}
 ### Fälle mit ED-Diagnose
 ```{r echo=TRUE}
 mod_ed_pan <- kruskal.test(icd_f50 ~ covid_pan, df_ed)
@@ -244,7 +241,7 @@ mod_edsonst_pan
 Corrected p-value for multiple testing is: `r format(mod_edsonst_pan[["p.value"]]*n_tests, scientific = FALSE)`
 
 
-## klinische Präsentation während Pandemie
+## klinische Präsentation während Pandemie {.tabset .tabset-pills}
 ### jüngeres Alter
 ```{r echo=TRUE}
 # kruskal.test(age_adm ~ covid_pan, df_ed)
